manifests/apps/wyze/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wyze
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: wyze # project namespace
#   name: wyze # specific ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/limit-rpm: "5000"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
# spec:
#   tls:
#     - hosts:
#         - wyze0j8hb24.loomistechnologies.com # full url
#       secretName: wyze-loomis-tls
#   rules:
#     - host: wyze0j8hb24.loomistechnologies.com # full url
#       http:
#         paths:
#           - backend:
#               service:
#                 name: wyze-website
#                 port:
#                   number: 80
#             path: /
#             pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wyze # project namespace
  name: wyze # specific ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/limit-rpm: '5000'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'false'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  tls:
    - hosts:
        - www.wyzetickets.com
      secretName: wyze-tls
  rules:
    - host: www.wyzetickets.com
      http:
        paths:
          - backend:
              service:
                name: wyze-website
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
